src/parser/test/parser-tests-gen/data/bad/bad-10.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: object|object
    example: {}
  Type2:
    type: object|object
    example: {}
  Type3:
    type: object
    example: |
      {
        "type3_bool_2": true,
        "type3_bool_1": true
      }
    properties:
      type3_bool_1:
        type: boolean
      type3_bool_2:
        type: boolean
  Type4:
    type: [Type3]
    example: |
      {
        "type3_bool_2": true,
        "type3_bool_1": true,
        "type4_bool_1": true,
        "type4_prop_1": "str"
      }
    properties:
      type4_prop_1:
        type: Seed41
      type4_bool_1:
        type: boolean
  Type5:
    type: Seed3|object
    example: |
      {
        "str3": "str",
        "num3": 1
      }
  Type6:
    type: [Seed1,Type4]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type3_bool_2": true,
        "type3_bool_1": true,
        "type4_bool_1": true,
        "type4_prop_1": "str",
        "type6_num_2": 1,
        "type6_num_1": 1
      }
    properties:
      type6_num_1:
        type: number
      type6_num_2:
        type: number
  Type7:
    type: [Type6,Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type3_bool_2": true,
        "type3_bool_1": true,
        "type4_bool_1": true,
        "type4_prop_1": "str",
        "type6_num_2": 1,
        "type6_num_1": 1,
        "type7_num_2": 1,
        "type7_num_1": 1
      }
    properties:
      type7_num_1:
        type: number
      type7_num_2:
        type: number
  Type8:
    type: object|object
    example: {}
  Type9:
    type: object|Seed1
    example: {}
  Type10:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type10_prop_2": {},
        "type10_prop_1": {}
      }
    properties:
      type10_prop_1:
        type: object
      type10_prop_2:
        type: object

/res1:
  post:
    body:
      application/json:
        type: [Type9]
        example: {}
/res2:
  post:
    body:
      application/json:
        type: Seed2
        example: |
          {
            "str2": "str",
            "num2": 1
          }
/res3:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res4:
  post:
    body:
      application/json:
        type: Type9
        example: {}
/res5:
  post:
    body:
      application/json:
        type: [Seed1]
        example: |
          {
            "str1": "str",
            "num1": 1
          }
